# deltabot_plugins

./: .gitignore  Makefile  README.rst
plugins/deltabot_activeusers/: README.rst  setup.py
plugins/deltabot_activeusers/deltabot_activeusers/: __init__.py  db.py
plugins/deltabot_echo/: setup.py
plugins/deltabot_echo/deltabot_echo/: __init__.py
plugins/simplebot_admin/simplebot_admin/: __init__.py
plugins/simplebot_avatar/: README.rst  setup.py
plugins/simplebot_avatar/simplebot_avatar/: __init__.py
plugins/simplebot_cartv/: CHANGELOG.rst  README.rst  setup.cfg  setup.py  simplebot_cartv.py
plugins/simplebot_cartv/simplebot_cartv/: __init__.py
plugins/simplebot_chain_reaction/: README.rst  setup.py
plugins/simplebot_chain_reaction/simplebot_chain_reaction/: __init__.py  db.py  game.py
plugins/simplebot_chatter/: README.rst  setup.py
plugins/simplebot_chatter/simplebot_chatter/: __init__.py
plugins/simplebot_checkers/: README.rst  setup.py
plugins/simplebot_checkers/simplebot_checkers/: __init__.py  game.py
plugins/simplebot_chess/: CHANGELOG.rst  MANIFEST.in  README.rst  setup.py
plugins/simplebot_chess/simplebot_chess/: __init__.py  db.py  game.py
plugins/simplebot_chess/simplebot_chess/templates/: base.html  board.html
plugins/simplebot_clines/: README.rst  setup.py
plugins/simplebot_clines/simplebot_clines/: __init__.py  db.py  game.py
plugins/simplebot_connect4/: README.rst  setup.py
plugins/simplebot_connect4/simplebot_connect4/: __init__.py  connect4.py
plugins/simplebot_corpse/: README.rst  setup.py
plugins/simplebot_corpse/simplebot_corpse/: __init__.py  db.py
plugins/simplebot_cubaweather/: setup.py
plugins/simplebot_cubaweather/simplebot_cubaweather/: __init__.py
plugins/simplebot_dice/: README.rst  setup.py
plugins/simplebot_dice/simplebot_dice/: __init__.py
plugins/simplebot_echo/: CHANGELOG.rst  setup.cfg  setup.py  simplebot_echo.py
plugins/simplebot_echo/simplebot_echo/: __init__.py  __int__.py
plugins/simplebot_facebook/: CHANGELOG.rst  README.rst  setup.py
plugins/simplebot_facebook/simplebot_facebook/: __init__.py
plugins/simplebot_feeds/: setup.py
plugins/simplebot_feeds/simplebot_feeds/: __init__.py  db.py
plugins/simplebot_friends/: CHANGELOG.rst  README.rst  setup.py
plugins/simplebot_friends/simplebot_friends/: __init__.py  db.py
plugins/simplebot_groupmaster/simplebot_groupmaster/: __init__.py
plugins/simplebot_groups/: CHANGELOG.rst  setup.py
plugins/simplebot_groups/simplebot_groups/: __init__.py  db.py
plugins/simplebot_irc/: CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
plugins/simplebot_irc/simplebot_irc/: __init__.py  database.py  irc.py
plugins/simplebot_mastodon/: setup.py
plugins/simplebot_mastodon/simplebot_mastodon/: __init__.py  db.py
plugins/simplebot_memes_en/: README.rst  setup.py
plugins/simplebot_memes_en/simplebot_memes_en/: __init__.py
plugins/simplebot_memes_es/: README.rst  setup.py
plugins/simplebot_memes_es/simplebot_memes_es/: __init__.py
plugins/simplebot_minesweeper/: README.rst  setup.py
plugins/simplebot_minesweeper/simplebot_minesweeper/: __init__.py  db.py  game.py
plugins/simplebot_polls/: README.rst  setup.py
plugins/simplebot_polls/simplebot_polls/: __init__.py  db.py
plugins/simplebot_reversi/: CHANGELOG.rst  MANIFEST.in  README.rst  setup.cfg  setup.py
plugins/simplebot_reversi/simplebot_reversi/: __init__.py  database.py  reversi.py
plugins/simplebot_rss/simplebot_rss/: __init__.py
plugins/simplebot_score/: README.rst  setup.py
plugins/simplebot_score/simplebot_score/: __init__.py  db.py
plugins/simplebot_sudoku/: README.rst  setup.py
plugins/simplebot_sudoku/simplebot_sudoku/: __init__.py  db.py  game.py
plugins/simplebot_translator/: CHANGELOG.rst  README.rst  setup.cfg  setup.py  simplebot_translator.py
plugins/simplebot_translator/simplebot_translator/: __init__.py
plugins/simplebot_webgrabber/: setup.py
plugins/simplebot_webgrabber/simplebot_webgrabber/: __init__.py
plugins/simplebot_wikiquote/: CHANGELOG.rst  README.rst  setup.cfg  setup.py  simplebot_wikiquote.py
plugins/simplebot_wikiquote/simplebot_wikiquote/: __init__.py
plugins/simplebot_writefreely/: README.rst  setup.py
plugins/simplebot_writefreely/simplebot_writefreely/: __init__.py  db.py
plugins/simplebot_xkcd/: CHANGELOG.rst  README.rst  setup.py
plugins/simplebot_xkcd/simplebot_xkcd/: __init__.py
plugins/simplebot_xmpp/: README.rst  setup.cfg  setup.py
plugins/simplebot_xmpp/simplebot_xmpp/: __init__.py  database.py  xmpp.py
scripts/: install_plugin.py
simplebot_chess/simplebot_chess/: __init__.py
