[metadata]
name = simplebot_cartv
version = attr: simplebot_cartv.version
description = A plugin for SimpleBot, a Delta Chat(http://delta.chat/) bot
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = simplebot, deltabot, plugin
license = MPL
classifiers =
            Development Status :: 3 - Alpha
            Environment :: Plugins
            Programming Language :: Python :: 3
            License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
            Operating System :: OS Independent
            Topic :: Utilities

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  deltabot requests pytz

[options.entry_points]
deltabot.plugins =
  simplebot_cartv = simplebot_cartv

[options.package_data]
* = *.txt, *.rst
